baml_language/crates/baml_tests/snapshots/compiles/scientific_notation_float/baml_tests__compiles__scientific_notation_float__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.DecimalMantissa() -> float  [expr] {
  {  } 1.5e3
}
function user.DecimalMantissaNegativeExponent() -> float  [expr] {
  {  } 1.5e-3
}
function user.IntegerMantissa() -> float  [expr] {
  {  } 1e10
}
function user.NegativeExponent() -> float  [expr] {
  {  } 1e-3
}
function user.PositiveExponent() -> float  [expr] {
  {  } 2e+5
}
function user.UppercaseExponent() -> float  [expr] {
  {  } 1E3
}
