baml_language/crates/baml_tests/snapshots/compiles/scientific_notation_float/baml_tests__compiles__scientific_notation_float__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.IntegerMantissa() -> float throws never {
  { : 1e10
    1e10 : 1e10
  }
}
function user.UppercaseExponent() -> float throws never {
  { : 1E3
    1E3 : 1E3
  }
}
function user.NegativeExponent() -> float throws never {
  { : 1e-3
    1e-3 : 1e-3
  }
}
function user.PositiveExponent() -> float throws never {
  { : 2e+5
    2e+5 : 2e+5
  }
}
function user.DecimalMantissa() -> float throws never {
  { : 1.5e3
    1.5e3 : 1.5e3
  }
}
function user.DecimalMantissaNegativeExponent() -> float throws never {
  { : 1.5e-3
    1.5e-3 : 1.5e-3
  }
}
